<resources>
    <string name="app_name">lets discuss</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="like_label">"likes "</string>
    <string name="user_label">"posted by "</string>
    <string name="comment_tag">"comments :"</string>
    <string name="openDrawer">open_drawer</string>
    <string name="imgdesc">imgdesc</string>
    <string name="action_settings">"action_settings"</string>
    <string name="ask_question">Ask Question</string>
    <string name="tag">Tag</string>
    <string name="views">"Views"</string>
    <string name="difficulty">"Difficulty : "</string>
    <string name="posted_by">"posted by "</string>
    <string name="choose_image">choose Image</string>
    <string name="save">save</string>
    <string name="asked_by">Asked by</string>
    <string name="answered_by">Answered by</string>
    <string name="your_comment">Your comment</string>
    <string name="add_comment">Add Comment</string>
    <string-array name="titles">
        <item>BookMarks</item>
        <item>Questions Liked</item>
        <item>Questions Commented</item>
        <item>Categories</item>
    </string-array>
</resources>
